--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="fr-FR">
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	</head>
 	<body>
-		<div id="langs">
-			<input type="submit" href="./?l=fr" value="Fr"/>
-			<input type="submit" href="./?l=en" value="En"/>
+		<div class="col-md-8-offset-2" >
+
 		</div>
 	</body>
 </html>
