Bonjour pouet ppouet

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Overflow by HTML5 UP</title>
+		<title>Modeling Mobile</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -29,37 +29,16 @@
 		<!-- Banner -->
 			<section id="banner" style="height:800px !important;">
 				<header>
-					<h2>This is Overflow</h2>
+					<h2>Catégories</h2>
 				</header>
 				<body>
-					
-					<div id="uml">
-
-						<!-- Votre page html sur l'uml ICI -->
-
-					</div>
-
-					<div id="dessins">
-
-						<!-- Votre page html sur dessins ICI -->
-
-					</div>
-
-					<div id="ide">
-
-						<!-- Votre page html sur l'ide ICI -->
-
-					</div>
-
-					<div id="difference">
-
-						<!-- Votre page html sur les différences ICI -->
-
-					</div>
-
+					<a href="./g5.html" class="button style2 scrolly">Différences</a>
+					<a href="#first" class="button style2 scrolly">IDE</a>
+					<a href="#first" class="button style2 scrolly">UML</a>
+					<a href="#first" class="button style2 scrolly">Dessins</a>
 				</body>
 				<footer>
-					<a href="#first" class="button style2 scrolly">Act on this message</a>
+					
 				</footer>
 			</section>
 			<script src="assets/js/jquery.min.js"></script>
