--- a/groupe4.html
+++ b/groupe4.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="stylegrp4.css">
 		<title>Plateformes de développements</title>
 	</head>
 	
@@ -46,7 +46,7 @@
 				<h2>Comparatif :</h2>
 				<div class="Mini_News">
 				
-					<img src="img/graph_coparatif.jpg">
+					<img src="image/graph_coparatif.jpg">
 					<p>
 						Android Studio :
 						<ul>
