--- a/g3.html
+++ b/g3.html
@@ -17,16 +17,22 @@
 		<!-- Banner -->
 			<section id="banner">
 				<header>
-					<h2>Différences</h2>
 				</header>
 				<body>
 					<h1>Outils et langages de description d’écrans</h1>
 
 					<h2>Problématique</h2>
 					<p>
-					Pas de diagrammes UML spécifiques pour modéliser les IHM.
+					Il n'existe pas de diagramme UML spécifiques pour modéliser les IHM. C'est pour combler ce manque que le SNI a été créé.
 					</p>
 
+					<h2>Le SNI - Schéma Navigationnel d'Interaction</h2>
+					<p>
+						Le SNI est purement conceptuel. Il est indépendant de la technologie uitlisée, du type d'IHM (menu, bouton, toucher) et de tout aspect matériel (clavier, type d'écran, souris, etc.)
+					</p>
+					<p>
+						Il permet une représentation simple et claire de l'enchaînement des écrans d'une IHM et peut ainsi être compris par tous les intervenants du projet.
+					</p>
 					<h2>Outils</h2>
 					<table>
 						<thead>
@@ -65,17 +71,23 @@
 						</tbody>
 					</table>
 
-					<h2>Exemple</h2>
+					<h2>Exemple de diagramme SNI</h2>
 					<p>
-					<img src="http://revue-eti.net/docannexe/image/1979/img-6.png" alt="Exemple de schéma SNI">
+					<img src="http://revue-eti.net/docannexe/image/1979/img-6.png" alt="Exemple de schéma SNI"><br>
+					Source : Le SNI : un modèle de haut niveau pour la conception et le maquettage des IHM <sup><a href="#source01">1</a></sup>
+					</p>
+
+					<h2>Conclusion</h2>
+					<p>
+						Dans le cadre d'une utilisation purement formelle, un logiciel tel que draw.io qui permet de réaliser tout de type de diagramme est suffisant. Si l'on souhaite l'intégrer à l'environnement de développement, il sera intéressant d'utiliser un outil spécifique comme VisualSNI qui, par exemple, permet de générer du code.
 					</p>
 
 					<h2>Annexes</h2>
 					<p>
-					<ul>
-						<li>
+					<ol>
+						<li id="source01">
 							<a href="http://revue-eti.net/document.php?id=1979" title="Le SNI : un modèle de haut niveau pour la conception et le maquettage des IHM">
-								Le SNI : un modèle de haut niveau pour la conception et le maquettage des IHM"
+								Le SNI : un modèle de haut niveau pour la conception et le maquettage des IHM
 							</a>
 						</li>
 						<li>
@@ -88,7 +100,7 @@
 								Cours conception d'IHM
 							</a>
 						</li>
-					</ul>
+					</ol>
 					</p>
 
 				</body>
