--- a/g4.html
+++ b/g4.html
@@ -1,14 +1,25 @@
-<!DOCTYPE html>
+	<!DOCTYPE HTML>
+<!--
+	Overflow by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<link rel="stylesheet" type="text/css" href="stylegrp4.css">
-		<title>Plateformes de développements</title>
+		<title>Modeling Mobile</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
-	
 	<body>
-	
-		<h1>Plateformes de développements</h1>
+		<!-- Banner -->
+			<section id="banner">
+				<header>
+				</header>
+				<body>
+					<h1>Plateformes de développements</h1>
 		
 		<div class="grand_widget">
 			<div class="News_int">	
@@ -81,5 +92,18 @@
 				</div>
 			</div>	
 		</div>			
+				</body>
+				<footer>
+					
+				</footer>
+			</section>
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
+
 	</body>
 </html>
