--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 		<!-- Banner -->
 			<section id="banner" style="height:800px !important;">
 				<header>
-					<h2>Catégories</h2>
+					<h2>Recherches</h2>
 				</header>
 				<body>
-					<a href="./g5.html" class="button style2 scrolly">Différences</a>
-					<a href="#first" class="button style2 scrolly">IDE</a>
-					<a href="#first" class="button style2 scrolly">UML</a>
-					<a href="#first" class="button style2 scrolly">Dessins</a>
+					<a href="./g2.html" class="button style2 scrolly">Liste concepts UML</a>
+					<a href="./g3.html" class="button style2 scrolly">SNI</a>
+					<a href="./g4.html" class="button style2 scrolly">Plateformes de dev</a>
+					<a href="./g5.html" class="button style2 scrolly">Différences plateformes mobiles</a>
 				</body>
 				<footer>
 					
