--- a/g4.html
+++ b/g4.html
@@ -57,7 +57,7 @@
 				<h2>Comparatif :</h2>
 				<div class="Mini_News">
 				
-					<img src="image/graph_coparatif.jpg">
+					<img src="images/graph_coparatif.jpg">
 					<p>
 						Android Studio :
 						<ul>
