--- a/g2.html
+++ b/g2.html
@@ -1,13 +1,26 @@
-<!DOCTYPE html>
+	<!DOCTYPE HTML>
+<!--
+	Overflow by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<link rel="stylesheet" type="text/css" href="stylegrp4.css">
-		<title>Plateformes de développements</title>
+		<title>Modeling Mobile</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
-	
 	<body>
-	<h1>Liste des concepts UML connus et utiles</h1>
+		<!-- Banner -->
+			<section id="banner">
+				<header>
+				</header>
+				<body>
+
+		<h1>Liste des concepts UML connus et utiles</h1>
 	
 	<p>
 		Dans le cadre du développement d'une application mobile, il est nécessaire d'avoir des outils pour communiquer avec le client, mais aussi entre informaticiens afin d'établir un standard compréhensible par tous.
@@ -109,6 +122,19 @@
 		Séquence
 		L'interaction entre l'appareil et l'utilisateur étant poussé à son paroxysme avec une application mobile, le diagramme de séquence est ici très utile. Celui-ci sert à mettre en exergue les différents processus et traitements 
 		résultant d'une interaction homme-machine lors de l'utilisation du logiciel.
-	</p>	
+	</p>
+				</body>
+				<footer>
+					
+				</footer>
+			</section>
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
+
 	</body>
 </html>
